<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Record Setting" >
        <ListPreference
            android:defaultValue="VIDEO_QUALITY_HIGH"
            android:entries="@array/VideoQualityKey"
            android:entryValues="@array/VideoQualityValue"
            android:key="VIDEO_QUALITY"
            android:summary="@string/VideoQualityDescribe"
            android:title="@string/VideoQuality" />
        <ListPreference
            android:defaultValue="15"
            android:entries="@array/VideoIntervalkey"
            android:entryValues="@array/VideoInrervalValue"
            android:key="TIME_INTERVAL"
            android:summary="@string/VideoTimeDescribe"
            android:title="@string/VideoTimeInterval" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="SUBTITLE"
            android:title="@string/recordSubtitle" />
    </PreferenceCategory>

</PreferenceScreen>