<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.66" >

        <SurfaceView
            android:id="@+id/videoSurView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/videoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/Empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/videoBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/Back"
            android:textSize="40dp" />

        <Button
            android:id="@+id/videoOpenButton"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/Open"
            android:textSize="40dp" />

        <Button
            android:id="@+id/videoPlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/Play"
            android:textSize="40dp" />

        <Button
            android:id="@+id/videoStopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/Stop"
            android:textSize="40dp" />

        <Button
            android:id="@+id/videoSubButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/Subtitle"
            android:textSize="40dp" />

    </LinearLayout>

</LinearLayout>