<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="865dp"
        android:layout_height="794dp"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="810dp"
            android:layout_height="617dp"
            android:orientation="vertical" >

            <SurfaceView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:keepScreenOn="true" />

            <com.google.android.maps.MapView
                android:id="@+id/recMapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:apiKey="@string/MAP_KEY"
                android:clickable="true"
                android:visibility="invisible" />
        </FrameLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="813dp"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="811dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/recTextView"
                    android:layout_width="match_parent"
                    android:layout_height="176dp"
                    android:text="@string/Empty"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/recBackButton"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_weight="0.11"
            android:text="@string/Back"
            android:textSize="40dp" />

        <Button
            android:id="@+id/recButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:text="@string/Rec"
            android:textSize="40dp" />

        <Button
            android:id="@+id/recSettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:text="@string/Setting"
            android:textSize="40dp" />

        <Button
            android:id="@+id/recMapButton"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:text="@string/Map"
            android:textSize="40dp" />
    </LinearLayout>

</LinearLayout>