<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.52"
        android:orientation="vertical" >

        <Button
            android:id="@+id/recEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:text="@string/RecordVideo"
            android:textSize="40dp" />

        <Button
            android:id="@+id/uploadEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:text="@string/Empty"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.52"
        android:orientation="vertical" >

        <Button
            android:id="@+id/playEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:text="@string/PlayVideo"
            android:textSize="40dp" />

        <Button
            android:id="@+id/exitEnrty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:text="@string/Exit"
            android:textSize="40dp" />
    </LinearLayout>

</LinearLayout>